# services/delivery/docs/swagger.yaml
@@ -40,16 +40,10 @@ paths:
     post:
       consumes:
       - application/json
-      description: get_courier_reservations
-      produces:
-      - application/json
+      description: add_courier
       responses:
         "200":
           description: OK
-          schema:
-            items:
-              $ref: '#/definitions/types.CourierReservation'
-            type: array
         "400":
           description: Bad Request
           schema:
@@ -70,7 +64,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/types.HTTPError'
-      summary: get_courier_reservations
+      summary: add_courier
       tags:
       - delivery
   /confirm_delivered:
@@ -102,6 +96,78 @@ paths:
           schema:
             $ref: '#/definitions/types.HTTPError'
       summary: confirm_delivered
+      tags:
+      - delivery
+  /get_all_courier_reservations:
+    get:
+      description: get_all_courier_reservations
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/types.CourierReservation'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "405":
+          description: Method Not Allowed
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+      summary: get_all_courier_reservations
+      tags:
+      - delivery
+  /get_courier_reservations:
+    post:
+      consumes:
+      - application/json
+      description: get_courier_reservations
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/types.CourierReservation'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "405":
+          description: Method Not Allowed
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/types.HTTPError'
+      summary: get_courier_reservations
       tags:
       - delivery
 swagger: "2.0"
